Added event start and end dates
