# EventService.Api/Dtos/Requests/EventUpdateDto.cs
@@ -1,3 +1,4 @@
+using System;
 using System.ComponentModel.DataAnnotations;
 using EventService.Dtos.Enums;
 
@@ -11,9 +12,10 @@ namespace EventService.Dtos.Requests
         public string Title { get; set; }
         public EventType EventType { get; set; }
         public string Description { get; set; }
-        public bool PermissionRequired { get; set; }
         public bool IsActive { get; set; }
         public double Latitude { get; set; }
         public double Longitude { get; set; }
+        public DateTime StartTime { get; set; }
+        public DateTime EndTime { get; set; }
     }
 }
