# EventService.Api/Dtos/Responses/EventReadDto.cs
@@ -10,10 +10,11 @@ namespace EventService.Dtos.Responses
         public string Title { get; set; }
         public EventType EventType { get; set; }
         public string Description { get; set; }
-        public bool PermissionRequired { get; set; }
         public bool IsActive { get; set; }
         public double Latitude { get; set; }
         public double Longitude { get; set; }
+        public DateTime StartTime { get; set; }
+        public DateTime EndTime { get; set; }
         public DateTime CreatedAt { get; set; }
         public DateTime UpdatedAt { get; set; }
     }
